objects/RemoteAppSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>consumer_key__c</fullName>
        <label>consumer key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>consumer_secret__c</fullName>
        <label>consumer secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint_url__c</fullName>
        <label>endpoint url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RemoteAppSettings</label>
</CustomObject>